--- a/jobs/templates/jobs/apply_job.html
+++ b/jobs/templates/jobs/apply_job.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
+<style>
+    .job-apply-job-container {
+        margin-top: 150px;
+    }
+</style>
+<div class="container job-apply-job-container">
 <h2 class="text-center text-dark">Apply for {{ job.title }}</h2>
 <form method="post" enctype="multipart/form-data" class="mt-3">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Submit Application</button>
+    <button type="submit" class="btn btn-warning">Submit Application</button>
 </form>
+</div>
 {% endblock %}
